# pismo_tech_case

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
migrations/: script.py.mako
migrations/versions/: 418920596455_add_account_limit_to_accounts_table.py  478919eca5f9_create_accounts_table.py  4d8e0de1b49d_create_transactions_table.py  6aabfe1d04c8_hidrate_operationstypes_table.py  bdbd1adc7f86_create_operationtypes_table.py
src/: main.py  models.py  repositories.py  requests.py  routes.py  settings.py  utils.py
tests/: factories.py  test_models.py  test_repositories.py  test_routes.py
